--- a/app/src/main/res/layout/fragment_hero_location.xml
+++ b/app/src/main/res/layout/fragment_hero_location.xml
@@ -11,23 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20dp"
-        android:text="Hero Location" />
+        android:textSize="20sp"
+        android:text="@string/hero_location" />
 
     <TextView
         android:id="@+id/heroname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:padding="10dp"
-        android:text="Hero Name" />
+        android:text="@string/hero_name" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp" />
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/custom_marker"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
 
 
 </LinearLayout>
